# BCSC-SS

./: .gitignore  .sonarcloud.properties  CODE_OF_CONDUCT.md  COMPLIANCE.yaml  DEVELOPMENT.md  README.md
selfservice-api/: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  gunicorn_config.py  manage.py  requirements.txt  setup.cfg  setup.py  wsgi.py
selfservice-api/migrations/versions/: 12dc55e0fd96_org_whitelist.py  1af8835de3a9_base.py  21a4a3ff3229_signing_encryption_type.py  3cb945520c97_refno_correction.py  4eec959c6e5e_is_prod_flag.py  52ef5bcf6ce2_email_queue.py  56f02ce3c0af_add_org_whitelist.py  599938806180_scope_package_changes.py  81bab187cd23_oidc_date.py  84faccdd32cf_oidc_config_and_test_account.py  9e95b2c825af_ref_no.py  bb14b70909c8_audit_change.py  c4864fc5d004_base.py  c835b355f5a8_email_queue.py  d10841f2ef80_oidc_config_change.py  d50be5c21c29_audit.py  e9d01a8a0b58_package_to_scope.py  f18e00b6fc2d_package_desc_change.py  f3f863aa6896_multi_project_users.py  f7f05ebec1f8_user_terms.py  fbbae69086d6_encryption_encoding_and_product_delete.py
selfservice-api/requirements/: dev.txt  prod.txt
selfservice-api/scripts/: verify_license_headers.sh
selfservice-api/src/selfservice_api/: __init__.py  config.py  version.py
selfservice-api/src/selfservice_api/exceptions/: __init__.py
selfservice-api/src/selfservice_api/models/: __init__.py  audit.py  audit_mixin.py  base_model.py  db.py  email_queue.py  login_history.py  (+9 more)
selfservice-api/tests/: conftest.py
selfservice-api/tests/api/: __init__.py  test_api_contactus.py  test_api_meta.py  test_api_oidc_config.py  test_api_ops.py  test_api_project.py  test_api_project_audit.py  test_api_scope_package.py  test_api_team.py  test_api_technical_req.py  test_api_test_account.py  test_api_user.py  test_api_values.py  test_meta.py  test_ops.py  test_project.py  test_technical_req.py  test_user.py  test_values.py
selfservice-api/tests/conf/: test_configuration.py
selfservice-api/tests/helper/: __init__.py  api_create_data.py  auth.py  request_data.py
selfservice-api/tests/models/: __init__.py  test_model_audit.py  test_model_login_history.py  test_model_oidc_config.py  test_model_project.py  test_model_scope_package.py  test_model_technical_req.py  test_model_test_account.py  test_model_user.py
selfservice-api/tests/unit/: __init__.py
selfservice-api/tests/utils/: test_logging.py
(+451 files in other folders)
